# BigEngine

./: .gitignore  CMakeLists.txt  main.cpp
Assets/Prefabs/: Camera Object.prefab  Cube Object.prefab  Object 1.prefab  Physical Test 1.prefab
Assets/Scenes/: SceneTest.json  SceneTest.scene
Math/: Matrix4.cpp  Matrix4.hpp  Vector3.cpp  Vector3.hpp  Vector4.cpp  Vector4.hpp  primitives.cpp  primitives.h
core/: Entity.cpp  Entity.hpp  component.cpp  component.h  game.cpp  game.h  game_object.cpp  game_object.h  game_time.cpp  game_time.h  object.cpp  object.h
core/components/: camera.cpp  camera.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  rigidbody.cpp  rigidbody.h  transform.cpp  transform.h
core/config/: project_settings.cpp  project_settings.h
coursmoteur/mainloop/: mainloop.vcxproj
editor/: assets_importer.cpp  assets_importer.h  editor.cpp  editor.h
scenes/: scene.cpp  scene.h
utils/: json_reader.cpp  json_reader.h  prefab_utils.cpp  prefab_utils.h
